01 override html styles

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,5 +4,13 @@
   "singleQuote": true,
   "bracketSpacing": true,
   "htmlWhitespaceSensitivity": "css",
-  "endOfLine": "lf"
+  "endOfLine": "lf",
+  "overrides": [
+    {
+      "files": "*.html",
+      "options": {
+        "tabWidth": 2
+      }
+    }
+  ]
 }
